@@ -1002,12 +1002,12 @@ class StaticPlaceholderNode(Tag):
         if isinstance(code, StaticPlaceholder):
             static_placeholder = code
         else:
-            if 'global' in extra_bits:
-                static_placeholder, __ = StaticPlaceholder.objects.get_or_create(code=code, site_id__isnull=True, defaults={'name': code,
-                    'creation_method': StaticPlaceholder.CREATION_BY_TEMPLATE})
-            else:
+            if 'local' in extra_bits:
                 site = Site.objects.get_current()
                 static_placeholder, __ = StaticPlaceholder.objects.get_or_create(code=code, site_id=site.pk, defaults={'name': code,
+                    'creation_method': StaticPlaceholder.CREATION_BY_TEMPLATE})
+            else:
+                static_placeholder, __ = StaticPlaceholder.objects.get_or_create(code=code, site_id__isnull=True, defaults={'name': code,
                     'creation_method': StaticPlaceholder.CREATION_BY_TEMPLATE})
         if not hasattr(request, 'static_placeholders'):
             request.static_placeholders = []
